force-app/main/default/objects/Marketing_Spend_Child__c/Marketing_Spend_Child__c.object-meta.xml
<CustomObject>
    <label>Marketing Spend Child</label>
    <nameField>
        <displayFormat>Marketing ActivityC-{000000}</displayFormat>
        <label>Marketing Spend Child Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Spend Dates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>