force-app/main/default/objects/Marketing_Spend_Child__c/fields/Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID__c</fullName>
    <formula>ms_Marketing_Spend__r.Deal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal ID</label>
    <type>Text</type>
</CustomField>