force-app/main/default/objects/Marketing_Spend_Child__c/fields/ms_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>ms_Approval_Status__c</fullName>
    <formula>TEXT(ms_Marketing_Spend__r.Approval_Status__c)</formula>
    <label>Approval Status</label>
    <type>Text</type>
</CustomField>