force-app/main/default/objects/Marketing_Spend_Child__c/fields/ms_Channel__c.field-meta.xml
<CustomField>
    <fullName>ms_Channel__c</fullName>
    <formula>TEXT( ms_Marketing_Spend__r.ms_Marketing_inventory__r.ms_Channel__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Channel</label>
    <type>Text</type>
</CustomField>