force-app/main/default/objects/Marketing_Spend_Child__c/fields/ms_Country__c.field-meta.xml
<CustomField>
    <fullName>ms_Country__c</fullName>
    <formula>ms_Marketing_Spend__r.ms_Country__c</formula>
    <label>Country</label>
    <type>Text</type>
</CustomField>