force-app/main/default/objects/Marketing_Spend_Child__c/fields/ms_Deal_Name__c.field-meta.xml
<CustomField>
    <fullName>ms_Deal_Name__c</fullName>
    <formula>ms_Marketing_Spend__r.Deal__c</formula>
    <label>Deal Name</label>
    <type>Text</type>
</CustomField>