force-app/main/default/objects/Marketing_Spend_Child__c/fields/ms_Geo__c.field-meta.xml
<CustomField>
    <fullName>ms_Geo__c</fullName>
    <formula>ms_Marketing_Spend__r.ms_Placement__c</formula>
    <label>Geo</label>
    <type>Text</type>
</CustomField>