force-app/main/default/objects/Marketing_Spend_Child__c/fields/ms_Geo_c__c.field-meta.xml
<CustomField>
    <fullName>ms_Geo_c__c</fullName>
    <formula>TEXT( ms_Marketing_Spend__r.ms_Marketing_inventory__r.ms_Geo__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geo</label>
    <type>Text</type>
</CustomField>