force-app/main/default/objects/Marketing_Spend_Child__c/fields/ms_Inventory_Name__c.field-meta.xml
<CustomField>
    <fullName>ms_Inventory_Name__c</fullName>
    <formula>ms_Marketing_Spend__r.InventoryName__c</formula>
    <label>Inventory Name</label>
    <type>Text</type>
</CustomField>