force-app/main/default/objects/Marketing_Spend_Child__c/fields/ms_InventoryName__c.field-meta.xml
<CustomField>
    <fullName>ms_InventoryName__c</fullName>
    <formula>ms_Marketing_Spend__r.ms_Marketing_inventory__r.Channel_Supplier_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InventoryName</label>
    <type>Text</type>
</CustomField>