force-app/main/default/objects/Marketing_Spend_Child__c/fields/ms_Marketing_Spend__c.field-meta.xml
<CustomField>
    <fullName>ms_Marketing_Spend__c</fullName>
    <label>Marketing Spend</label>
    <referenceTo>Marketing_Spend__c</referenceTo>
    <relationshipLabel>Marketing Spend Dates</relationshipLabel>
    <relationshipName>Marketing_Spend_Childs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>