force-app/main/default/objects/Marketing_Spend_Child__c/fields/ms_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>ms_Start_Time__c</fullName>
    <formula>ms_Marketing_Spend__r.ms_Marketing_inventory__r.ms_TimeText__c</formula>
    <label>Start Time</label>
    <type>Text</type>
</CustomField>