force-app/main/default/objects/Marketing_Spend_Child__c/fields/ms_Supplier__c.field-meta.xml
<CustomField>
    <fullName>ms_Supplier__c</fullName>
    <formula>TEXT( ms_Marketing_Spend__r.ms_Marketing_inventory__r.ms_Supplier__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier</label>
    <type>Text</type>
</CustomField>