force-app/main/default/objects/Marketing_Spend_Child__c/fields/ms_Title__c.field-meta.xml
<CustomField>
    <fullName>ms_Title__c</fullName>
    <formula>ms_Marketing_Spend__r.Inventory_Title__c</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>