force-app/main/default/objects/Marketing_Spend_Child__c/fields/Sub_status__c.field-meta.xml
<CustomField>
    <fullName>Sub_status__c</fullName>
    <formula>Text(ms_Marketing_Spend__r.Sub_status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Status</label>
    <type>Text</type>
</CustomField>